--- a/template.html
+++ b/template.html
@@ -84,9 +84,17 @@
     <h2 id="quiz-title"></h2>
     <button onclick="iniziaQuiz(1)">🎤 Quiz 1 - Competenze Digitali Base</button>
     <button onclick="iniziaQuiz(2)">📧 Quiz 2 - Internet, Email e PEC</button>
-    <button onclick="iniziaQuiz(3)">🔐 Quiz 3 - SPID, Cybersecurity e GDPR</button>
-    <!-- 🔽 NUOVO PULSANTE -->
-    <button onclick="iniziaQuiz('3-2')">🛡️ Quiz 3-2 - Approfondimento Cybersecurity/GDPR</button>
+
+    <!-- 🔽 Raggruppamento Quiz 3 -->
+    <button onclick="mostraSottomenuQuiz3()">🔐 Quiz 3 - SPID, Cybersecurity e GDPR</button>
+    <div id="submenu-quiz3" style="display:none; margin-top:10px;">
+      <button onclick="iniziaQuiz(3)">📘 Quiz 3 - Base</button>
+      <button onclick="iniziaQuiz('3-2')">🛡️ Quiz 3-2 - Approfondimento</button>
+      <div style="margin-top:10px;">
+        <button onclick="nascondiSottomenuQuiz3()">⬅️ Indietro</button>
+      </div>
+    </div>
+
     <button onclick="iniziaQuiz(4)">💬 Quiz 4 - Social Media</button>
     <button onclick="iniziaQuiz(5)">💻 Quiz 5 - Produttività, Cyberbullismo e Tecnologia</button>
     <div style="margin-top:15px;">
@@ -135,7 +143,7 @@
     let indexDomanda = 0;
     let quizCorrente = 1;
     let MAX_DOMANDE = 0;
-    const FEEDBACK_DELAY = 200;
+    const FEEDBACK_DELAY = 200; // 0,2 secondi
 
     function setDocenteMode(mode) {
       if(mode){
@@ -250,6 +258,7 @@
       });
       recapHTML+="</div>";
 
+      // Conteggio corrette, sbagliate, non date
       const corrette = risposteUtente.filter(r=>r && r.esito).length;
       const sbagliate = risposteUtente.filter(r=>r && !r.esito).length;
       const nonDate = MAX_DOMANDE - risposteUtente.length;
@@ -263,6 +272,7 @@
 
       document.getElementById('recap').innerHTML=recapHTML;
 
+      // Creazione grafico
       const ctx=document.getElementById('graficoRiepilogo').getContext('2d');
       new Chart(ctx,{
         type:'bar',
@@ -307,7 +317,7 @@
     function terminaTest(){ indexDomanda=MAX_DOMANDE; mostraRecap(); }
 
     async function iniziaQuiz(quizId){
-      quizCorrente=quizId; // può essere numero o stringa
+      quizCorrente=quizId;
       document.getElementById('quiz-buttons').style.display='none';
       if(docenteMode){
         document.getElementById('docente-container').style.display='block';
@@ -355,6 +365,14 @@
     function tornaAllaModalita(){
       document.getElementById('quiz-buttons').style.display='none';
       document.getElementById('start-container').style.display='block';
+    }
+
+    // 🔹 Funzioni per gestire sotto-menu Quiz 3
+    function mostraSottomenuQuiz3(){
+      document.getElementById('submenu-quiz3').style.display = 'block';
+    }
+    function nascondiSottomenuQuiz3(){
+      document.getElementById('submenu-quiz3').style.display = 'none';
     }
   </script>
 </body>
