--- a/template.html
+++ b/template.html
@@ -85,16 +85,17 @@
     <button onclick="iniziaQuiz(1)">🎤 Quiz 1 - Competenze Digitali Base</button>
     <button onclick="iniziaQuiz(2)">📧 Quiz 2 - Internet, Email e PEC</button>
 
-    <!-- 🔽 Raggruppamento Quiz 3 -->
+     <!-- 🔽 Raggruppamento Quiz 3 -->
     <button onclick="mostraSottomenuQuiz3()">🔐 Quiz 3 - SPID, Cybersecurity e GDPR</button>
     <div id="submenu-quiz3" style="display:none; margin-top:10px;">
       <button onclick="iniziaQuiz(3)">📘 Quiz 3 - Base</button>
       <button onclick="iniziaQuiz('3-2')">🛡️ Quiz 3-2 - Approfondimento</button>
+      <button onclick="iniziaQuiz('3-3')">🧪 Quiz 3-3 - Vero/Falso</button>
       <div style="margin-top:10px;">
         <button onclick="nascondiSottomenuQuiz3()">⬅️ Indietro</button>
       </div>
     </div>
-
+    
     <button onclick="iniziaQuiz(4)">💬 Quiz 4 - Social Media</button>
     <button onclick="iniziaQuiz(5)">💻 Quiz 5 - Produttività, Cyberbullismo e Tecnologia</button>
     <div style="margin-top:15px;">
